Fix bug on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body {
     line-height: 1.5;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     min-height: 100svh;
 }
 
@@ -100,7 +101,7 @@ h1 {
 .hero-text>p {
     margin: 0.5em 0;
 }
-/* 
+
 button {
     width: 8rem;
     padding: 0.5rem 1rem;
@@ -110,7 +111,7 @@ button {
 .hero-text>button {
     margin-top: 3em;
     place-self: center;
-} */
+} 
 
 h2 {
     margin-bottom: 0.5em;
@@ -119,7 +120,7 @@ h2 {
 p {
     margin-bottom: 0.5em;
 }
-/* 
+ 
 .reviews {
     display: grid;
 }
@@ -127,7 +128,7 @@ p {
 .reviews>.cta {
     margin-top: 1em;
     place-self: center;
-} */
+} 
 
 .dishes {
     margin-top: 2em;
